fix: adjust z-index values and add charge waypoint tracking

--- a/style/main.scss
+++ b/style/main.scss
@@ -46,7 +46,7 @@ div.map-logo {
   left: 50px;
   padding: 25px;
   border-radius: 10%;
-  z-index: 15000;
+  z-index: 1001;
 
   img {
     max-width: 100px; /* Control the size of your logo */
